improved menu items options gss

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -89,6 +89,15 @@ fieldset {
   border-color: light-dark(#fff, #5f5f5f);
 }
 
+.menuItemActionDiv {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.operationMenuItemsFieldset {
+  min-height: fit-content;
+}
+
 .overflow {
   position: relative;
   height: 3em;
